--- a/app/src/main/res/layout/activity_add_movie_from_tmdb.xml
+++ b/app/src/main/res/layout/activity_add_movie_from_tmdb.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.bareitan.movierent.addMovieFromTMDB">
+    tools:context="com.example.bareitan.movierent.AddMovieFromTMDBActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/movieName"
+            android:id="@+id/query"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -26,10 +26,20 @@
             android:text="@string/search"
  />
     </LinearLayout>
-
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/moviesRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+</LinearLayout>
+
+
 </LinearLayout>
