--- a/app/src/main/res/layout/activity_edit_movie.xml
+++ b/app/src/main/res/layout/activity_edit_movie.xml
@@ -1,51 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.bareitan.movierent.EditMovieActivity">
+    android:orientation="vertical"
+    tools:context="com.example.bareitan.movierent.AddMovieActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/movie_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/movie_name"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+            <TextView
+                android:id="@+id/movieNameTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/movie_name" />
 
-    <EditText
-        android:id="@+id/movie_overview"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/movie_name"
-        android:hint="@string/movie_overview"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/movie_name" />
+            <EditText
+                android:id="@+id/movie_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/movie_name" />
 
-    <Spinner
-        android:id="@+id/movie_category"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/movie_overview"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/stock"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+            <TextView
+                android:id="@+id/movieOverviewTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/movie_overview"/>
 
-    <EditText
-        android:id="@+id/stock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="numberSigned"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/movie_overview" />
+            <EditText
+                android:id="@+id/movie_overview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/movie_overview"
+                android:inputType="textMultiLine"/>
 
-</android.support.constraint.ConstraintLayout>
+            <Spinner
+                android:id="@+id/movie_category"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content" />
+
+
+            <TextView
+                android:id="@+id/stockTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/movie_stock" />
+
+            <EditText
+                android:id="@+id/stock"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/movie_stock"
+                android:inputType="numberSigned"
+                android:text="0" />
+
+
+            <TextView
+                android:id="@+id/thumb_urltext"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/thumb_url" />
+
+            <EditText
+                android:id="@+id/thumb_url"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/thumb_url"
+                android:inputType="text" />
+
+            <Button
+                android:id="@+id/submit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/update_movie" />
+        </LinearLayout>
+    </ScrollView>
+
+
+
+</LinearLayout>
