--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -11,26 +11,31 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <TextView
             android:id="@+id/movie_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/movie_name"
             android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/movie_name"
+            android:textAppearance="@android:style/TextAppearance.Material.Headline"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" />
+            android:layout_marginStart="8dp" />
 
         <TextView
             android:id="@+id/movie_overview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/movie_name"
-            android:text="@string/movie_overview"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/movie_name" />
+            android:text="@string/movie_overview"
+            android:textAppearance="@android:style/TextAppearance.Material.Body1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/movie_name"
+            android:layout_marginStart="8dp" />
 
         <TextView
             android:id="@+id/movie_category"
@@ -41,7 +46,8 @@
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/movie_overview" />
+            app:layout_constraintTop_toBottomOf="@+id/movie_overview"
+            android:layout_marginStart="8dp" />
 
         <Switch
             android:id="@+id/rent_movie"
@@ -50,21 +56,25 @@
             android:text="@string/rent_movie"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginRight="8dp"
+            android:layout_marginRight="7dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/thumbnail"
+            android:layout_marginEnd="7dp" />
 
         <ImageView
             android:id="@+id/thumbnail"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/movie_category"
-            app:srcCompat="@drawable/placeholder"
+            android:layout_width="350dp"
+            android:layout_height="350dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:scaleType="centerCrop"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/movie_category"
+            app:srcCompat="@drawable/placeholder" />
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
 
