--- a/app/src/main/res/menu/user_menu.xml
+++ b/app/src/main/res/menu/user_menu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/app_bar_search"
+        android:id="@+id/search"
         android:actionViewClass="android.widget.SearchView"
         android:icon="@drawable/ic_search_black_24dp"
         android:title="@string/search"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="collapseActionView|ifRoom" />
     <item android:id="@+id/rent_history"
         android:title="@string/History"/>
     <item android:id="@+id/edit_profile"
@@ -14,5 +14,11 @@
 
     <item android:id="@+id/sign_out"
         android:title="@string/sign_out"/>
+    <item
+        android:id="@+id/catgory_spinner"
+        android:title="@string/movie_category"
+        app:actionViewClass="android.widget.Spinner"
+        android:background="#ff00"
+        app:showAsAction="always" />
 
 </menu>
