--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusableInTouchMode="true"
     tools:context="com.example.bareitan.movierent.MovieDetailActivity">
 <ScrollView
     android:layout_width="match_parent"
@@ -17,12 +18,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/movie_name"
             android:textAppearance="@android:style/TextAppearance.Material.Headline"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="8dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/movie_overview"
@@ -30,24 +31,24 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/movie_name"
             android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/movie_overview"
             android:textAppearance="@android:style/TextAppearance.Material.Body1"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/movie_name"
-            android:layout_marginStart="8dp" />
+            app:layout_constraintTop_toBottomOf="@+id/movie_name" />
 
         <TextView
             android:id="@+id/movie_category"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/movie_overview"
-            android:text="@string/movie_category"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/movie_overview"
-            android:layout_marginStart="8dp" />
+            android:text="@string/movie_category"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/movie_overview" />
 
         <ImageView
             android:id="@+id/thumbnail"
@@ -60,6 +61,18 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/movie_category"
             app:srcCompat="@drawable/placeholder" />
+
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:name="com.example.bareitan.movierent.CommentsFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/thumbnail" />
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
 
